- Changed DirectoryScanner a bit. --> Full scan is now only performed on first startup --> Next startup will fetch info from "./appdata/data.json"
- Added writing to "./userdata/data.json" for possible user-settings.
-- (Only "hadInitialScan" has been added for now.)

- A LOT of formatting & refactoring.

- More formatting & refactoring.